--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       <div class="d-flex flex-column">
         <div class="profile">
           <img
-            src="assets/img/profile2.jpg"
+            src="assets/img/Profile2.jpg"
             alt=""
             class="img-fluid rounded-circle"
           />
