--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/TitleIcon.png" rel="icon" />
-    <link href="assets/img/TitleIcon.png" rel="apple-touch-icon" />
+    <link href="assets/img/TitleIcon.jpg" rel="icon" />
+    <link href="assets/img/TitleIcon.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
