Insta and linked in URL updatee

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
               ><i class="bx bxl-facebook"></i
             ></a>
             <a
-              href="https://www.instagram.com/heart_thefter_/"
+              href="https://www.instagram.com/sirancheevi_shan_/"
               class="instagram"
               target="_blank"
               ><i class="bx bxl-instagram"></i
@@ -87,7 +87,7 @@
               ><i class="bx bxl-skype"></i
             ></a>
             <a
-              href="https://www.linkedin.com/in/sirancheevi-shan-605335156/"
+              href="https://www.linkedin.com/in/sirancheevi-palraj-605335156/"
               class="linkedin"
               target="_blank"
               ><i class="bx bxl-linkedin"></i
