--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
               ><i class="bx bxl-facebook"></i
             ></a>
             <a
-              href="https://www.instagram.com/sirancheevi_shan_/"
+              href="https://www.instagram.com/sirancheevi_shan/"
               class="instagram"
               target="_blank"
               ><i class="bx bxl-instagram"></i
